--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>radiant-progress-bar</title>
+    <title>RadiantProgressBar - Circular Progress Bar for React</title>
+    <meta name="description" content="A beautiful, customizable circular progress bar component for React with gradient support and smooth animations." />
+    <meta name="keywords" content="react, progress bar, circular, gradient, typescript, tailwind" />
     <link href="/src/app.css" rel="stylesheet">
   </head>
   <body>
