--- a/index.html
+++ b/index.html
@@ -2,11 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RadiantProgressBar - Circular Progress Bar for React</title>
-    <meta name="description" content="A beautiful, customizable circular progress bar component for React with gradient support and smooth animations." />
-    <meta name="keywords" content="react, progress bar, circular, gradient, typescript, tailwind" />
+
+    <!-- Primary Meta Tags -->
+    <title>RadiantProgressBar - Circular Progress Bar Component for React</title>
+    <meta name="title" content="RadiantProgressBar - Circular Progress Bar Component for React" />
+    <meta name="description" content="A beautiful, customizable circular progress bar component for React with gradient support, smooth animations, TypeScript support, and Tailwind CSS compatibility. Easy to install via npm." />
+    <meta name="keywords" content="react progress bar, circular progress bar, radiant progress bar, react component, gradient progress bar, typescript, tailwind css, npm package, javascript, animated progress bar" />
+    <meta name="author" content="Shibin Abraham" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://shibin-abraham.github.io/radiant-progress-bar/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/radiant-progress-bar/favicon.svg" />
+    <link rel="apple-touch-icon" href="/radiant-progress-bar/favicon.svg" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shibin-abraham.github.io/radiant-progress-bar/" />
+    <meta property="og:title" content="RadiantProgressBar - Circular Progress Bar Component for React" />
+    <meta property="og:description" content="A beautiful, customizable circular progress bar component for React with gradient support, smooth animations, and TypeScript support." />
+    <meta property="og:image" content="https://shibin-abraham.github.io/radiant-progress-bar/og-image.svg" />
+    <meta property="og:site_name" content="RadiantProgressBar" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://shibin-abraham.github.io/radiant-progress-bar/" />
+    <meta name="twitter:title" content="RadiantProgressBar - Circular Progress Bar Component for React" />
+    <meta name="twitter:description" content="A beautiful, customizable circular progress bar component for React with gradient support, smooth animations, and TypeScript support." />
+    <meta name="twitter:image" content="https://shibin-abraham.github.io/radiant-progress-bar/og-image.svg" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "RadiantProgressBar",
+      "applicationCategory": "DeveloperApplication",
+      "operatingSystem": "Any",
+      "description": "A beautiful, customizable circular progress bar component for React with gradient support and smooth animations.",
+      "url": "https://shibin-abraham.github.io/radiant-progress-bar/",
+      "downloadUrl": "https://www.npmjs.com/package/radiant-progress-bar",
+      "softwareVersion": "1.0.10",
+      "author": {
+        "@type": "Person",
+        "name": "Shibin Abraham",
+        "url": "https://github.com/Shibin-Abraham"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "programmingLanguage": ["TypeScript", "JavaScript", "React"],
+      "keywords": "react, progress bar, circular, gradient, typescript, tailwind css"
+    }
+    </script>
+
     <link href="/src/app.css" rel="stylesheet">
   </head>
   <body>
