--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="6k350krOdU-wokaXiFeqObSdI0yg8pBiEPX0b94SNXM" />
+
     <!-- Primary Meta Tags -->
     <title>RadiantProgressBar - Circular Progress Bar Component for React</title>
     <meta name="title" content="RadiantProgressBar - Circular Progress Bar Component for React" />
